tests/predicates/predicates.exp
sanity-fall-through.js:12
 12:   return 1;
              ^ number. This type is incompatible with the expected return type of
  8: function foo(s: Array<string>): string {
                                     ^^^^^^ string

sanity-invalid-calls.js:10
 10:   if ((1)(s)) {
            ^^^^^ function call. Function cannot be called on
 10:   if ((1)(s)) {
            ^ number

sanity-invalid-calls.js:14
 14:   if ((pred + 1)("s")) {
            ^^^^ function type. This type cannot be added to
 14:   if ((pred + 1)("s")) {
            ^^^^^^^^ string

sanity-invalid-calls.js:14
 14:   if ((pred + 1)("s")) {
            ^^^^^^^^^^^^^^ function call. Function cannot be called on
 14:   if ((pred + 1)("s")) {
            ^^^^^^^^ string

sanity-invalid-calls.js:14
 14:   if ((pred + 1)("s")) {
                   ^ number. This type cannot be added to
 14:   if ((pred + 1)("s")) {
            ^^^^^^^^ string

sanity-is-string-bug.js:13
 13:     return x.join();    // error: both string and Array<string> can flow to x
                  ^^^^ property `join`. Property not found in
 13:     return x.join();    // error: both string and Array<string> can flow to x
                ^ String

sanity-pred-with-body.js:7
  7:   return typeof x === "string"; // error: boolean incompatible with $StrP
              ^^^^^^^^^^^^^^^^^^^^^ boolean. This type is incompatible with the expected return type of
  6: function pred(x: mixed): $StrP {
                              ^^^^^ string predicate


Found 7 errors
